# rust-reviewpal-demo

./: Cargo.toml  README.md  UserDashboard.tsx
.github/workflows/: reviewpal.yml
src/: auth.rs  main.rs
