[package]
name = "reviewpal_demo"
version = "0.1.0"
edition = "2021"
description = "A demo Rust project to test ReviewPal code reviews"
authors = ["Han Kim"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
